--- a/.drone.yml
+++ b/.drone.yml
@@ -1,21 +1,21 @@
 kind: pipeline
-type: docker
-name: build_and_push
+name: build-and-deploy
+
 steps:
-- name: install_dependencies
-  image: node:16  # Replace with the appropriate Node.js version
-  commands:
-    - cd drone_deploy
-    - npm install
+  - name: install-dependencies
+    image: node:14
+    commands:
+      - cd drone_deploy_test
+      - npm install
 
-- name: build
-  image: node:16  # Replace with your build image
-  commands:
-    - cd drone_deploy
-    - npm run build
+  - name: build-angular-app
+    image: node:14
+    commands:
+      - cd drone_deploy_test
+      - npm run build
 
-- name: deploy-to-firebase
-    image: node:16
+  - name: deploy-to-firebase
+    image: node:14
     environment:
       FIREBASE_TOKEN: "1//09yis-h9DDMyPCgYIARAAGAkSNwF-L9Iryv2VpMnehBjVHUq-3WFomFDlWChMspbRvN7qUAifb2rpu89yN8wSyOWRG3gdoNLU7PU"
       FIREBASE_PROJECT_ID: "deploy-17f14"
