--- a/.drone.yml
+++ b/.drone.yml
@@ -20,5 +20,6 @@ steps:
       FIREBASE_TOKEN: "1//09yis-h9DDMyPCgYIARAAGAkSNwF-L9Iryv2VpMnehBjVHUq-3WFomFDlWChMspbRvN7qUAifb2rpu89yN8wSyOWRG3gdoNLU7PU"
       FIREBASE_PROJECT_ID: "deploy-17f14"
     commands:
+      - npm install -g firebase-tools@12.0.0
       - firebase use --add $FIREBASE_PROJECT_ID
       - firebase deploy --token $FIREBASE_TOKEN
