--- a/drone_deploy/angular.json
+++ b/drone_deploy/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/drone_deploy",
+            "outputPath": "../dist/drone_deploy",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
