--- a/.drone.yml
+++ b/.drone.yml
@@ -17,8 +17,8 @@ steps:
   - name: deploy-to-firebase
     image: node:16
     environment:
-      FIREBASE_TOKEN: "{{secrets.FIREBASE_TOKEN}}"
-      FIREBASE_PROJECT_ID: "{{secrets.FIREBASE_PROJECT}}"
+      FIREBASE_TOKEN: FIREBASE_TOKEN
+      FIREBASE_PROJECT_ID: FIREBASE_PROJECT
     commands:
       - npm install -g firebase-tools@12.0.0
       - firebase use --add $FIREBASE_PROJECT_ID
