--- a/.drone.yml
+++ b/.drone.yml
@@ -18,7 +18,7 @@ steps:
     image: node:16
     environment:
       FIREBASE_TOKEN: firebase_token
-      FIREBASE_PROJECT_ID: firebase_project
+      FIREBASE_PROJECT_ID: firebase_project_id
     commands:
       - npm install -g firebase-tools@12.0.0
       - firebase use --add $FIREBASE_PROJECT_ID
